--- a/index.html
+++ b/index.html
@@ -2,35 +2,71 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
+    <script
+      src="https://kit.fontawesome.com/3c22cb9314.js"
+      crossorigin="anonymous"
+    ></script>
+
     <link rel="stylesheet" href="src/styles.css" />
     <title>👩‍💻My Coding Journey</title>
   </head>
   <body>
+    <div class="container-head mb-5">
+      <div class="par">
+        <a href="#" class="button-all"><button class="btn">Home</button></a>
+        <a href="#" class="button-all"><button class="btn">About me</button></a>
+        <a href="#" class="button-all"
+          ><button class="btn">Portfolio</button></a
+        >
+        <a href="#" class="button-all"
+          ><button class="btn">Contact me</button></a
+        >
+      </div>
+    </div>
     <div class="container">
-      <div class="container page-hero">
-        <h1 class="hello">
-          Hello, I'm <span class="adeola-name">Adeola Ilavbare</span>.
-          <div>Front-end Web Developer.</div>
-        </h1>
-        <button class="myJourney">My Journey</button>
+      <div class="row">
+        <div class="col-md-6 col-12">
+          <div class="container_content">
+            <div class="container_content_inner">
+              <div class="title text-center">
+                <h1>
+                  <i class="fa-solid fa-hand fa-flip"></i>Hello, I'm Adeola
+                  Ilavbare, a Front-end Developer. Welcome to my World.
+                </h1>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 col-12">
+          <div class="container_outer_img">
+            <div class="img-inner">
+              <img
+                src="src/woman-coding-smile.jpg"
+                alt="woman-coding"
+                class="container_img"
+              />
+            </div>
+          </div>
+        </div>
       </div>
     </div>
 
-    <div class="header-links">
-      <a href="#" class="active link-only">HOME</a>
-      <a href="#" class="link-only">ABOUT</a>
-      <a href="#" class="link-only">MY JOURNEY</a>
-      <a href="#" class="link-only">CONTACT</a>
+    <div class="btns">
+      <button class="btns_more">See more</button>
     </div>
-    <div class="container about-me">
-      <h2 class="text-center fs-3 mt-5">My Coding Journey</h2>
-    </div>
+
+    <div class="overlay"></div>
   </body>
 </html>
