More Hero-Page Edits

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <div class="container_outer_img">
             <div class="img-inner">
               <img
-                src="src/woman-coding-smile.jpg"
+                src="src/adeola-new-pics.jpg"
                 alt="woman-coding"
                 class="container_img"
               />
