Integrated Cards With Mock-ups

--- a/index.html
+++ b/index.html
@@ -41,10 +41,15 @@
           <div class="container_content">
             <div class="container_content_inner">
               <div class="title text-center">
-                <h1>
-                  <i class="fa-solid fa-hand fa-flip"></i>Hello, I'm Adeola
-                  Ilavbare, a Front-end Developer. Welcome to my World.
-                </h1>
+                <h1 class="text-center text-primary">About me</h1>
+                <h2>
+                  Hello, I'm Adeola Ilavbare, a Front-end Developer.Welcome to
+                  my corner of the web! >
+                </h2>
+                <p class="web">
+                  I can help you transform your imaginations to reality with
+                  codes
+                </p>
               </div>
             </div>
           </div>
@@ -60,11 +65,66 @@
             </div>
           </div>
         </div>
+        <div class="btns">
+          <button class="btns_more my-work">Check my work</button>
+        </div>
       </div>
     </div>
 
-    <div class="btns">
-      <button class="btns_more">See more</button>
+    <div class="container buttom">
+      <div class="row">
+        <div class="col-md-4 col-12">
+          <div class="card" style="width: 18rem">
+            <img
+              src="src/weather-mokup.jpg"
+              class="card-img-top"
+              alt="weather-app"
+              style="max-width: 300px"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">
+                A 6 days vanilla weather forecast app built with HTML, CSS,
+                advance Javascript and Boostrap.
+              </p>
+              <a href="#" class="btn btn-primary">Launch App</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 col-12">
+          <div class="card" style="width: 18rem">
+            <img
+              src="src/top-view-tortilla-with-vegetables-meat.jpg"
+              class="card-img-top"
+              alt="weather-app"
+              style="max-width: 300px"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">
+                A reponsive landing page built for sheCodes Food Challenge.
+              </p>
+              <a href="#" class="btn btn-primary">Launch App</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 col-12">
+          <div class="card" style="width: 18rem">
+            <img
+              src="src/weather-mockup-react.jpg"
+              class="card-img-top"
+              alt="weather-app"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text mb-5">
+                Weather forecast app built with HTML, CSS, bootstrap & React.
+              </p>
+              <a href="#" class="btn btn-primary mb-3">Launch App</a>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 
     <div class="overlay"></div>
