--- a/index.html
+++ b/index.html
@@ -14,10 +14,6 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
-    <script
-      src="https://kit.fontawesome.com/3c22cb9314.js"
-      crossorigin="anonymous"
-    ></script>
 
     <link rel="stylesheet" href="src/styles.css" />
     <title>👩‍💻My Coding Journey</title>
@@ -25,14 +21,10 @@
   <body>
     <div class="container-head mb-5">
       <div class="par">
-        <a href="#" class="button-all"><button class="btn">Home</button></a>
-        <a href="#" class="button-all"><button class="btn">About me</button></a>
-        <a href="#" class="button-all"
-          ><button class="btn">Portfolio</button></a
-        >
-        <a href="#" class="button-all"
-          ><button class="btn">Contact me</button></a
-        >
+        <a href="#" class="active text-danger">Home</a>
+        <a href="#">About-me</a>
+        <a href="#myWork">Portfolio</a>
+        <a href="#">Contact-me</a>
       </div>
     </div>
     <div class="container">
@@ -42,13 +34,13 @@
             <div class="container_content_inner">
               <div class="title text-center">
                 <h1 class="text-center text-primary">About me</h1>
-                <h2>
-                  Hello, I'm Adeola Ilavbare, a Front-end Developer.Welcome to
-                  my corner of the web! >
+                <h2 class="d-sm-none d-md-block">
+                  Hello, I'm Adeola Ilavbare, a Front-end Developer. Welcome to
+                  my corner of the web!
                 </h2>
                 <p class="web">
-                  I can help you transform your imaginations to reality with
-                  codes
+                  I can help transform your imaginations into reality with my
+                  codes.
                 </p>
               </div>
             </div>
@@ -73,55 +65,64 @@
 
     <div class="container buttom">
       <div class="row">
-        <div class="col-md-4 col-12">
-          <div class="card" style="width: 18rem">
-            <img
-              src="src/weather-mokup.jpg"
-              class="card-img-top"
-              alt="weather-app"
-              style="max-width: 300px"
-            />
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">
-                A 6 days vanilla weather forecast app built with HTML, CSS,
-                advance Javascript and Boostrap.
-              </p>
-              <a href="#" class="btn btn-primary">Launch App</a>
-            </div>
+        <div class="card mb-3 mt-3" style="width: 18rem">
+          <div class="card-body">
+            <h5 class="card-title mb-3 text-center">Vanilla Weather App</h5>
+            <p class="card-text">
+              <img
+                src="src/weather-mokup.jpg"
+                alt="Vanilla-weather"
+                style="width: 250px"
+              />
+            </p>
+            <a
+              href="https://adeola-ilavbare-vanilaweatherapp.onrender.com/"
+              target="_blank"
+              class="btn btn-primary"
+              >Launch App</a
+            >
           </div>
         </div>
-        <div class="col-md-4 col-12">
-          <div class="card" style="width: 18rem">
-            <img
-              src="src/top-view-tortilla-with-vegetables-meat.jpg"
-              class="card-img-top"
-              alt="weather-app"
-              style="max-width: 300px"
-            />
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">
-                A reponsive landing page built for sheCodes Food Challenge.
-              </p>
-              <a href="#" class="btn btn-primary">Launch App</a>
-            </div>
+
+        <div class="card mb-3 mt-3" style="width: 18rem">
+          <div class="card-body">
+            <h5 class="card-title mb-3 text-center">
+              Favourite Food Landing Page
+            </h5>
+            <p class="card-text">
+              <img
+                src="src/top-view-tortilla-with-vegetables-meat.jpg"
+                alt="Food"
+                style="width: 250px"
+              />
+            </p>
+            <a
+              href="https://flavour-food.onrender.com/"
+              target="_blank"
+              class="btn btn-primary"
+              >Launch App</a
+            >
           </div>
         </div>
-        <div class="col-md-4 col-12">
-          <div class="card" style="width: 18rem">
-            <img
-              src="src/weather-mockup-react.jpg"
-              class="card-img-top"
-              alt="weather-app"
-            />
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text mb-5">
-                Weather forecast app built with HTML, CSS, bootstrap & React.
-              </p>
-              <a href="#" class="btn btn-primary mb-3">Launch App</a>
-            </div>
+        <div class="card mb-3 mt-3" style="width: 18rem">
+          <div class="card-body">
+            <h5 class="card-title mb-3 text-center">
+              Weather App Built With React
+            </h5>
+            <p class="card-text">
+              <img
+                src="src/weather-mockup-react.jpg"
+                alt="react-weather-app"
+                style="width: 250px"
+              />
+            </p>
+            <a
+              href="https://react-weather-project-ws2x.onrender.com/"
+              target="_blank"
+              class="btn btn-primary"
+              id="myWork"
+              >Launch App</a
+            >
           </div>
         </div>
       </div>
