--- a/index.html
+++ b/index.html
@@ -14,18 +14,41 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
 
     <link rel="stylesheet" href="src/styles.css" />
     <title>👩‍💻My Coding Journey</title>
   </head>
   <body>
     <div class="container-head mb-5">
-      <div class="par">
-        <a href="#" class="active text-danger">Home</a>
-        <a href="#">About-me</a>
-        <a href="#myWork">Portfolio</a>
-        <a href="#">Contact-me</a>
-      </div>
+      <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">AVI</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link" href="#">About me</a>
+              <a class="nav-link" href="#myWork">Portolio</a>
+              <a class="nav-link" href="#">Contact me</a>
+            </div>
+          </div>
+        </div>
+      </nav>
     </div>
     <div class="container">
       <div class="row">
@@ -58,8 +81,11 @@
           </div>
         </div>
         <div class="btns">
-          <button class="btns_more my-work">Check my work</button>
+          <button class="btns_more">
+            <a href="#myWork">Check my work</a>
+          </button>
         </div>
+        <hr />
       </div>
     </div>
 
@@ -127,7 +153,5 @@
         </div>
       </div>
     </div>
-
-    <div class="overlay"></div>
   </body>
 </html>
