--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script
+      src="https://kit.fontawesome.com/3c22cb9314.js"
+      crossorigin="anonymous"
+    ></script>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -24,39 +28,48 @@
     <title>👩‍💻My Coding Journey</title>
   </head>
   <body>
-    <div class="container-head mb-5">
-      <nav class="navbar navbar-expand-lg">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">AVI</a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNavAltMarkup"
-            aria-controls="navbarNavAltMarkup"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-              <a class="nav-link" href="#">About me</a>
-              <a class="nav-link" href="#myWork">Portolio</a>
-              <a class="nav-link" href="#">Contact me</a>
-            </div>
-          </div>
+    <nav class="navbar navbar-expand-lg">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">AVI</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#aboutMe"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#aboutMe">About Me</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#myWork">Project</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#myContact">Contact Me</a>
+            </li>
+          </ul>
         </div>
-      </nav>
-    </div>
+      </div>
+    </nav>
+
     <div class="container">
       <div class="row">
         <div class="col-md-6 col-12">
           <div class="container_content">
             <div class="container_content_inner">
               <div class="title text-center">
-                <h1 class="text-center text-primary">About me</h1>
+                <h1 class="text-center text-primary" id="aboutMe">About</h1>
                 <h2 class="d-sm-none d-md-block">
                   Hello, I'm Adeola Ilavbare, a Front-end Developer. Welcome to
                   my corner of the web!
@@ -82,7 +95,7 @@
         </div>
         <div class="btns">
           <button class="btns_more">
-            <a href="#myWork">Check my work</a>
+            <a href="#myContact" id="myContact">Contact me</a>
           </button>
         </div>
         <hr />
@@ -105,7 +118,7 @@
               href="https://adeola-ilavbare-vanilaweatherapp.onrender.com/"
               target="_blank"
               class="btn btn-primary"
-              >Launch App</a
+              >View Project</a
             >
           </div>
         </div>
@@ -126,7 +139,7 @@
               href="https://flavour-food.onrender.com/"
               target="_blank"
               class="btn btn-primary"
-              >Launch App</a
+              >View Project</a
             >
           </div>
         </div>
@@ -147,10 +160,16 @@
               target="_blank"
               class="btn btn-primary"
               id="myWork"
-              >Launch App</a
+              >View Project</a
             >
           </div>
         </div>
+      </div>
+    </div>
+    <div class="container-contact">
+      <div class="row">
+        <div class="col-sm-4"></div>
+        <div class="col-sm-8"><p>Drop a message.</p></div>
       </div>
     </div>
   </body>
