Navbar Styling Redo

--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
       src="https://kit.fontawesome.com/3c22cb9314.js"
       crossorigin="anonymous"
     ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-      crossorigin="anonymous"
-    ></script>
 
     <link rel="stylesheet" href="src/styles.css" />
     <title>👩‍💻My Coding Journey</title>
@@ -30,35 +30,27 @@
   <body>
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">AVI</a>
+        <a class="navbar-brand bg-text-primary" href="#">AVI</a>
         <button
           class="navbar-toggler"
           type="button"
           data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
+          data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
           aria-expanded="false"
           aria-label="Toggle navigation"
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#aboutMe"
-                >Home</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#aboutMe">About Me</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#myWork">Project</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#myContact">Contact Me</a>
-            </li>
-          </ul>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link active" aria-current="page" href="#aboutMe"
+              >Home</a
+            >
+            <a class="nav-link" href="#aboutMe ">About Me</a>
+            <a class="nav-link" href="#myWork">Projects</a>
+            <a class="nav-link" href="#contactMe">Contact Me</a>
+          </div>
         </div>
       </div>
     </nav>
@@ -69,7 +61,7 @@
           <div class="container_content">
             <div class="container_content_inner">
               <div class="title text-center">
-                <h1 class="text-center text-primary" id="aboutMe">About</h1>
+                <h1 class="text-center text-primary" id="aboutMe">About Me</h1>
                 <h2 class="d-sm-none d-md-block">
                   Hello, I'm Adeola Ilavbare, a Front-end Developer. Welcome to
                   my corner of the web!
