--- a/index.html
+++ b/index.html
@@ -30,7 +30,17 @@
   <body>
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
-        <a class="navbar-brand bg-text-primary" href="#">AVI</a>
+        <a class="navbar-brand" href="#"></a>
+        <a href="https://github.com/Adeolade1st"
+          ><i class="fa-brands fa-github heading"></i
+        ></a>
+        <a href="https://www.linkedin.com/in/adeola-ilavbare-98a621260"
+          ><i class="fa-brands fa-linkedin heading"></i
+        ></a>
+        <a href="https://twitter.com/raisingsrs"
+          ><i class="fa-brands fa-twitter heading"></i
+        ></a>
+
         <button
           class="navbar-toggler"
           type="button"
@@ -85,15 +95,10 @@
             </div>
           </div>
         </div>
-        <div class="btns">
-          <button class="btns_more">
-            <a href="#myContact" id="myContact">Contact me</a>
-          </button>
-        </div>
-        <hr />
       </div>
     </div>
 
+    <div><h5 class="text-right mt-1">Check My Project</h5></div>
     <div class="container buttom">
       <div class="row">
         <div class="card mb-3 mt-3" style="width: 18rem">
@@ -109,9 +114,15 @@
             <a
               href="https://adeola-ilavbare-vanilaweatherapp.onrender.com/"
               target="_blank"
-              class="btn btn-primary"
+              class="btn btn-primary mb-4"
               >View Project</a
             >
+            <div>
+              <i class="fa-brands fa-html5 fa-beat"></i>
+              <i class="fa-brands fa-css3 fa-beat"></i>
+              <i class="fa-brands fa-js fa-beat"></i>
+              <i class="fa-solid fa-rocket fa-beat"></i>
+            </div>
           </div>
         </div>
 
@@ -130,9 +141,13 @@
             <a
               href="https://flavour-food.onrender.com/"
               target="_blank"
-              class="btn btn-primary"
+              class="btn btn-primary mb-4"
               >View Project</a
             >
+            <div>
+              <i class="fa-brands fa-html5 fa-beat"></i>
+              <i class="fa-brands fa-css3 fa-beat"></i>
+            </div>
           </div>
         </div>
         <div class="card mb-3 mt-3" style="width: 18rem">
@@ -150,13 +165,24 @@
             <a
               href="https://react-weather-project-ws2x.onrender.com/"
               target="_blank"
-              class="btn btn-primary"
+              class="btn btn-primary mb-4"
               id="myWork"
               >View Project</a
             >
+            <div>
+              <i class="fa-brands fa-react fa-beat"></i>
+              <i class="fa-brands fa-css3 fa-beat"></i>
+              <i class="fa-brands fa-js fa-beat"></i>
+              <i class="fa-solid fa-rocket fa-beat"></i>
+            </div>
           </div>
         </div>
       </div>
+    </div>
+    <div class="btns">
+      <button class="btns_more">
+        <a href="#myContact" id="myContact " class="contact-me">Contact me</a>
+      </button>
     </div>
     <div class="container-contact">
       <div class="row">
