--- a/index.html
+++ b/index.html
@@ -80,6 +80,16 @@
                   I can help transform your imaginations into reality with my
                   codes.
                 </p>
+                <p class="why-me">
+                  <a
+                    href=""
+                    class="typewrite"
+                    data-period="2000"
+                    data-type='[ "Why Choose Me.", "I Love to Solve Problems💭", "I Am Creative🎨", "I Love to Develop🚧" ]'
+                  >
+                    <span class="wrap"></span>
+                  </a>
+                </p>
               </div>
             </div>
           </div>
@@ -97,8 +107,6 @@
         </div>
       </div>
     </div>
-
-    <div><h5 class="text-right mt-1">Check My Project</h5></div>
     <div class="container buttom">
       <div class="row">
         <div class="card mb-3 mt-3" style="width: 18rem">
@@ -190,5 +198,6 @@
         <div class="col-sm-8"><p>Drop a message.</p></div>
       </div>
     </div>
+    <script src="src/app.js"></script>
   </body>
 </html>
