--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     />
 
     <link rel="stylesheet" href="src/styles.css" />
-    <title>👩‍💻My Coding Journey</title>
+    <title>👩‍💻My Portfolio</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg">
@@ -107,9 +107,18 @@
         </div>
       </div>
     </div>
+
+    <div class="container work">
+      <h5 class="my-work">
+        <div>
+          <a href="#myContact" class="btn btn-primary">Contact Me</a>
+        </div>
+        <div class="past-project">Past Projects</div>
+      </h5>
+    </div>
     <div class="container buttom">
       <div class="row">
-        <div class="card mb-3 mt-3" style="width: 18rem">
+        <div class="card" style="width: 18rem">
           <div class="card-body">
             <h5 class="card-title mb-3 text-center">Vanilla Weather App</h5>
             <p class="card-text">
@@ -134,7 +143,7 @@
           </div>
         </div>
 
-        <div class="card mb-3 mt-3" style="width: 18rem">
+        <div class="card" style="width: 18rem">
           <div class="card-body">
             <h5 class="card-title mb-3 text-center">
               Favourite Food Landing Page
@@ -158,7 +167,7 @@
             </div>
           </div>
         </div>
-        <div class="card mb-3 mt-3" style="width: 18rem">
+        <div class="card" style="width: 18rem">
           <div class="card-body">
             <h5 class="card-title mb-3 text-center">
               Weather App Built With React
@@ -187,15 +196,11 @@
         </div>
       </div>
     </div>
-    <div class="btns">
-      <button class="btns_more">
-        <a href="#myContact" id="myContact " class="contact-me">Contact me</a>
-      </button>
-    </div>
+
     <div class="container-contact">
       <div class="row">
         <div class="col-sm-4"></div>
-        <div class="col-sm-8"><p>Drop a message.</p></div>
+        <div class="col-sm-8" id="myContact"><p>Drop a message.</p></div>
       </div>
     </div>
     <script src="src/app.js"></script>
