--- a/index.html
+++ b/index.html
@@ -138,7 +138,6 @@
               <i class="fa-brands fa-html5 fa-beat"></i>
               <i class="fa-brands fa-css3 fa-beat"></i>
               <i class="fa-brands fa-js fa-beat"></i>
-              <i class="fa-solid fa-rocket fa-beat"></i>
             </div>
           </div>
         </div>
@@ -189,7 +188,6 @@
               <i class="fa-brands fa-react fa-beat"></i>
               <i class="fa-brands fa-css3 fa-beat"></i>
               <i class="fa-brands fa-js fa-beat"></i>
-              <i class="fa-solid fa-rocket fa-beat"></i>
             </div>
           </div>
         </div>
@@ -199,47 +197,53 @@
     <div class="container-contact">
       <p class="get-intouch">Get in Touch</p>
       <div class="row mt-5">
+        <div class="col-md-6 col-12">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d253682.4631078896!2d3.119143053662222!3d6.548369370561364!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b8b2ae68280c1%3A0xdc9e87a367c3d9cb!2sLagos!5e0!3m2!1sen!2sng!4v1697459944623!5m2!1sen!2sng"
+            width="600"
+            height="300"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
+        </div>
         <div class="col-6">
           <ul class="contact-social-links" id="myContact">
             <li id="contactMe">
-              <p>
-                <a href="mailto:raisingsrs@gmail.com"
-                  ><i class="fa-solid fa-envelope"></i> Send me a mail</a
-                >
-              </p>
+              <span>
+                <p>
+                  <a href="mailto:raisingsrs@gmail.com"
+                    ><i class="fa-solid fa-envelope mt-3"></i>
+                  </a>
+                </p>
+              </span>
             </li>
             <li>
               <p>
-                <a href="#"
-                  ><i class="fa-solid fa-location-dot"></i> Lagos, Nigeria</a
-                >
+                <a href="https://github.com/Adeolade1st"
+                  ><i class="fa-brands fa-github heading"></i
+                ></a>
               </p>
             </li>
+
             <li>
               <p>
-                <a href="#"><i class="fa-solid fa-phone"></i> +2347030252923</a>
+                <a href="https://www.linkedin.com/in/adeola-ilavbare-98a621260"
+                  ><i class="fa-brands fa-linkedin heading"></i
+                ></a>
+              </p>
+            </li>
+
+            <li>
+              <p>
+                <a href="https://twitter.com/raisingsrs"
+                  ><i class="fa-brands fa-twitter heading"></i
+                ></a>
               </p>
             </li>
           </ul>
         </div>
-        <div class="col-6">
-          <img
-            src="src/rag-doll-with-giant-magnifying-glass-looking-blue.jpg"
-            alt="woman-coding"
-            style="width: 200px"
-            class="mock-dull"
-          />
-        </div>
-        <span class="socials d-flex justify-content-evenly">
-          <a href="https://github.com/Adeolade1st"
-            ><i class="fa-brands fa-github heading"></i
-          ></a>
-          <a href="https://www.linkedin.com/in/adeola-ilavbare-98a621260"
-            ><i class="fa-brands fa-linkedin heading"></i
-          ></a>
-          <a href="https://twitter.com/raisingsrs"
-            ><i class="fa-brands fa-twitter heading"></i></a
-        ></span>
       </div>
     </div>
 
