--- a/index.html
+++ b/index.html
@@ -30,16 +30,18 @@
   <body>
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"></a>
-        <a href="https://github.com/Adeolade1st"
-          ><i class="fa-brands fa-github heading"></i
-        ></a>
-        <a href="https://www.linkedin.com/in/adeola-ilavbare-98a621260"
-          ><i class="fa-brands fa-linkedin heading"></i
-        ></a>
-        <a href="https://twitter.com/raisingsrs"
-          ><i class="fa-brands fa-twitter heading"></i
-        ></a>
+        <div class="d-md-none d-lg-none socials-top">
+          <a class="navbar-brand" href="#"></a>
+          <a href="https://github.com/Adeolade1st"
+            ><i class="fa-brands fa-github heading"></i
+          ></a>
+          <a href="https://www.linkedin.com/in/adeola-ilavbare-98a621260"
+            ><i class="fa-brands fa-linkedin heading"></i
+          ></a>
+          <a href="https://twitter.com/raisingsrs"
+            ><i class="fa-brands fa-twitter heading"></i
+          ></a>
+        </div>
 
         <button
           class="navbar-toggler"
@@ -77,8 +79,7 @@
                   my corner of the web!
                 </h2>
                 <p class="web">
-                  I can help transform your imaginations into reality with my
-                  codes.
+                  I can help transform your ideas into reality with my codes.
                 </p>
                 <p class="why-me">
                   <a
@@ -194,13 +195,13 @@
       </div>
     </div>
 
-    <div class="container-contact">
+    <div class="container-contact mb-5">
       <p class="get-intouch">Get in Touch</p>
       <div class="row mt-5">
         <div class="col-md-6 col-12">
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d253682.4631078896!2d3.119143053662222!3d6.548369370561364!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b8b2ae68280c1%3A0xdc9e87a367c3d9cb!2sLagos!5e0!3m2!1sen!2sng!4v1697459944623!5m2!1sen!2sng"
-            width="600"
+            width="400"
             height="300"
             style="border: 0"
             allowfullscreen=""
@@ -208,41 +209,57 @@
             referrerpolicy="no-referrer-when-downgrade"
           ></iframe>
         </div>
-        <div class="col-6">
-          <ul class="contact-social-links" id="myContact">
-            <li id="contactMe">
-              <span>
+        <div class="col-md-6 col-12">
+          <div class="social-large-screen">
+            <ul class="contact-social-links" id="myContact">
+              <li id="contactMe">
                 <p>
                   <a href="mailto:raisingsrs@gmail.com"
-                    ><i class="fa-solid fa-envelope mt-3"></i>
+                    ><i class="fa-solid fa-envelope mt-3 heading"></i>
                   </a>
                 </p>
-              </span>
-            </li>
-            <li>
-              <p>
-                <a href="https://github.com/Adeolade1st"
-                  ><i class="fa-brands fa-github heading"></i
-                ></a>
-              </p>
-            </li>
+              </li>
+              <li>
+                <p>
+                  <a href="https://github.com/Adeolade1st"
+                    ><i class="fa-brands fa-github heading"></i
+                  ></a>
+                </p>
+              </li>
 
-            <li>
-              <p>
-                <a href="https://www.linkedin.com/in/adeola-ilavbare-98a621260"
-                  ><i class="fa-brands fa-linkedin heading"></i
-                ></a>
-              </p>
-            </li>
+              <li>
+                <p>
+                  <a
+                    href="https://www.linkedin.com/in/adeola-ilavbare-98a621260"
+                    ><i class="fa-brands fa-linkedin heading"></i
+                  ></a>
+                </p>
+              </li>
 
-            <li>
-              <p>
-                <a href="https://twitter.com/raisingsrs"
-                  ><i class="fa-brands fa-twitter heading"></i
-                ></a>
-              </p>
-            </li>
-          </ul>
+              <li>
+                <p>
+                  <a href="https://twitter.com/raisingsrs"
+                    ><i class="fa-brands fa-twitter heading"></i
+                  ></a>
+                </p>
+              </li>
+            </ul>
+          </div>
+
+          <div class="d-md-none d-lg-none small-screen-footer">
+            <a href="mailto:raisingsrs@gmail.com"
+              ><i class="fa-solid fa-envelope mt-3 heading-small-screen"></i>
+            </a>
+            <a href="https://twitter.com/raisingsrs"
+              ><i class="fa-brands fa-twitter heading-small-screen"></i
+            ></a>
+            <a href="https://www.linkedin.com/in/adeola-ilavbare-98a621260"
+              ><i class="fa-brands fa-linkedin heading-small-screen"></i
+            ></a>
+            <a href="https://github.com/Adeolade1st"
+              ><i class="fa-brands fa-github heading-small-screen"></i
+            ></a>
+          </div>
         </div>
       </div>
     </div>
