--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
+    <meta name="description" content="Adeola Ilavbare Portfolio Landing Page" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script
@@ -32,13 +33,15 @@
       <div class="container-fluid">
         <div class="d-md-none d-lg-none socials-top">
           <a class="navbar-brand" href="#"></a>
-          <a href="https://github.com/Adeolade1st"
+          <a href="https://github.com/Adeolade1st" title="github"
             ><i class="fa-brands fa-github heading"></i
           ></a>
-          <a href="https://www.linkedin.com/in/adeola-ilavbare-98a621260"
+          <a
+            href="https://www.linkedin.com/in/adeola-ilavbare-98a621260"
+            title="linkedin"
             ><i class="fa-brands fa-linkedin heading"></i
           ></a>
-          <a href="https://twitter.com/raisingsrs"
+          <a href="https://twitter.com/raisingsrs" title="email"
             ><i class="fa-brands fa-twitter heading"></i
           ></a>
         </div>
@@ -102,6 +105,7 @@
                 src="src/adeola-new-pics.jpg"
                 alt="woman-coding"
                 class="container_img"
+                title="adeola-ilavbare"
               />
             </div>
           </div>
@@ -127,10 +131,12 @@
                 src="src/weather-mokup.jpg"
                 alt="Vanilla-weather"
                 style="width: 250px"
+                title="weather-app"
               />
             </p>
             <a
               href="https://adeola-ilavbare-vanilaweatherapp.onrender.com/"
+              title="Vanilla=weather-app"
               target="_blank"
               class="btn btn-primary mb-4"
               >View Project</a
@@ -157,6 +163,7 @@
             </p>
             <a
               href="https://flavour-food.onrender.com/"
+              title="favourite-food"
               target="_blank"
               class="btn btn-primary mb-4"
               >View Project</a
@@ -181,6 +188,7 @@
             </p>
             <a
               href="https://react-weather-project-ws2x.onrender.com/"
+              title="react-weather-app"
               target="_blank"
               class="btn btn-primary mb-4"
               >View Project</a
@@ -207,6 +215,8 @@
             allowfullscreen=""
             loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"
+            alt="google-map"
+            title="google-map"
           ></iframe>
         </div>
         <div class="col-md-6 col-12">
@@ -214,16 +224,23 @@
             <ul class="contact-social-links" id="myContact">
               <li id="contactMe">
                 <p>
-                  <a href="mailto:raisingsrs@gmail.com"
-                    ><i class="fa-solid fa-envelope mt-3 heading"></i>
+                  <a
+                    href="mailto:raisingsrs@gmail.com "
+                    target="_blank"
+                    title="email"
+                    ><i class="fa-solid fa-envelope mt-3 heading"></i> Shoot me
+                    a mail.
                   </a>
                 </p>
               </li>
               <li>
                 <p>
-                  <a href="https://github.com/Adeolade1st"
-                    ><i class="fa-brands fa-github heading"></i
-                  ></a>
+                  <a
+                    href="https://github.com/Adeolade1st"
+                    target="_blank"
+                    title="github"
+                    ><i class="fa-brands fa-github heading"></i>Follow me.</a
+                  >
                 </p>
               </li>
 
@@ -231,33 +248,44 @@
                 <p>
                   <a
                     href="https://www.linkedin.com/in/adeola-ilavbare-98a621260"
-                    ><i class="fa-brands fa-linkedin heading"></i
-                  ></a>
+                    title="linkedin"
+                    target="_blank"
+                    ><i class="fa-brands fa-linkedin heading"></i>Connect with
+                    me.</a
+                  >
                 </p>
               </li>
 
               <li>
                 <p>
-                  <a href="https://twitter.com/raisingsrs"
-                    ><i class="fa-brands fa-twitter heading"></i
-                  ></a>
+                  <a
+                    href="https://twitter.com/raisingsrs"
+                    target="_blank"
+                    title="twitter"
+                    ><i class="fa-brands fa-twitter heading"></i>Follow me.</a
+                  >
                 </p>
               </li>
             </ul>
           </div>
 
           <div class="d-md-none d-lg-none small-screen-footer">
-            <a href="mailto:raisingsrs@gmail.com"
+            <a href="mailto:raisingsrs@gmail.com" title="email"
               ><i class="fa-solid fa-envelope mt-3 heading-small-screen"></i>
             </a>
-            <a href="https://twitter.com/raisingsrs"
+            <a href="https://twitter.com/raisingsrs" title="twitter"
               ><i class="fa-brands fa-twitter heading-small-screen"></i
             ></a>
-            <a href="https://www.linkedin.com/in/adeola-ilavbare-98a621260"
+            <a
+              href="https://www.linkedin.com/in/adeola-ilavbare-98a621260"
+              title="linkedin"
               ><i class="fa-brands fa-linkedin heading-small-screen"></i
             ></a>
             <a href="https://github.com/Adeolade1st"
-              ><i class="fa-brands fa-github heading-small-screen"></i
+              ><i
+                class="fa-brands fa-github heading-small-screen"
+                title="github"
+              ></i
             ></a>
           </div>
         </div>
